// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshots 1`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ"
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 2`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt"
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 3`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX"
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 4`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

.TextInput-module__error-dark___FPgjH {
  border-color: var(--qtm-colors-neutral-0);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX TextInput-module__text-input-dark___TrWzt TextInput-module__error-dark___FPgjH"
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 5`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ"
    disabled=""
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 6`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt"
    disabled=""
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 7`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ"
    placeholder="Placeholder text"
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 8`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt"
    placeholder="Placeholder text"
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 9`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ"
    readonly=""
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
    value="Value text"
  />
</div>
`;

exports[`Input component should match snapshots 10`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt"
    readonly=""
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
    value="Value text"
  />
</div>
`;

exports[`Input component should match snapshots 11`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ"
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
    value="Value text"
  />
</div>
`;

exports[`Input component should match snapshots 12`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt"
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
    value="Value text"
  />
</div>
`;

exports[`Input component should match snapshots 13`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ"
    placeholder="Placeholder text"
    readonly=""
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
    value="Value text"
  />
</div>
`;

exports[`Input component should match snapshots 14`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt"
    placeholder="Placeholder text"
    readonly=""
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
    value="Value text"
  />
</div>
`;

exports[`Input component should match snapshots 15`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX"
    disabled=""
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;

exports[`Input component should match snapshots 16`] = `
.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

.TextInput-module__error-dark___FPgjH {
  border-color: var(--qtm-colors-neutral-0);
}

<div>
  <input
    class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX TextInput-module__text-input-dark___TrWzt TextInput-module__error-dark___FPgjH"
    disabled=""
    style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
  />
</div>
`;
